syntax = "proto3";
package stayking.levstakeibc;

import "gogoproto/gogo.proto";

option go_package = "github.com/soohoio/stayking/v2/x/levstakeibc/types";

message SwapAmountInRoute {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string token_out_denom = 2
      [ (gogoproto.moretags) = "yaml:\"token_out_denom\"" ];
}

message SwapAmountOutRoute {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string token_in_denom = 2
      [ (gogoproto.moretags) = "yaml:\"token_out_denom\"" ];
}
